--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
+    "author": "David Galvan",
     "name": "freecodecamp",
-    "version": "1.0.0",
-    "author": "David Galvan"
+    "version": "1.0.0"
 }
